K8s/k8sBGPcalico/out-clusterIP.yaml
# https://docs.tigera.io/calico/latest/network-policy/services/services-cluster-ips
# Add rules to allow the external traffic for each clusterIP. 
# The following example allows connections to two cluster IPs. Make sure you add applyOnForward and preDNAT rules.
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-cluster-ips
spec:
  selector: k8s-role == 'node'
  types:
  - Ingress
  applyOnForward: true
  preDNAT: true
  ingress:
   # Allow 50.60.0.0/16 to access Cluster IP A
  - action: Allow
    source:
      nets:
      - 10.3.18.0/24
    destination:
      nets:
      - 10.88.163.74/32  #Cluster IP A
   # Allow 70.80.90.0/24 to access Cluster IP B
  # - action: Allow
    # source:
    #   nets:
    #   - 70.80.90.0/24
    # destination:
    #   nets:
    #   - 10.20.30.41/32  Cluster IP B
